--- a/Certifactura/.classpath
+++ b/Certifactura/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/javax.inject.jar"/>
 	<classpathentry kind="lib" path="lib/guava-12.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OSP"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
